# masters-project-nanosxx

./: configure.ac
src/: common.am
src/apis/c/: nanos.h  nanos_wd.cpp
src/arch/gpu/: gpuprocessor_decl.hpp
src/arch/opencl/: openclprocessor.cpp
src/arch/smp/: smpdd.hpp
src/core/: aggregate.cpp  aggregate.hpp  aggregate_cache.cpp  aggregate_cache.hpp  aggregate_cache_decl.hpp  aggregate_cache_fwd.hpp  aggregate_decl.hpp  aggregate_fwd.hpp  commutationdepobj_decl.hpp  dependableobject.cpp  dependableobject.hpp  dependableobject_decl.hpp  dependableobjectwd.cpp  dependableobjectwd.hpp  dependableobjectwd_decl.hpp  dependableobjectwr.cpp  dependableobjectwr.hpp  dependableobjectwr_decl.hpp  dependableobjectwr_fwd.hpp  schedule.cpp  system.cpp  system_decl.hpp  version_commons.am  workdescriptor.cpp  workdescriptor.hpp  workdescriptor_decl.hpp
src/core/debug/: Makefile.am
src/core/instrumentation/: Makefile.am
src/core/instrumentation-debug/: Makefile.am
src/core/performance/: Makefile.am
src/plugins/instrumentation/: print_trace.cpp
src/plugins/sched/: versioning_sched.cpp
src/pms/chapel/: version_commons.am
src/support/: debug.hpp
